# liblpme

./: .gitignore  README.md  aftman.toml  default.project.json  example.project.json  pyproject.toml  pytest.toml  test.project.json
docs/: README.md
docs/client/: README.md  util.md
docs/server/: README.md
example/client/: test.server.luau
example/server/: test.py
src/: main.py
src/client/: liblpme.luau  util.luau
src/client/extra/: playerlist.luau
src/liblpme/: main.py  util.py
test/server/: conftest.py  server.py  test.py  test_auth.py  test_event.py  test_session.py
