[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LibLPME"
version = "0.1.0"
description = "Long-Polled Messaging Engine, for communication between Roblox servers and user applications."
authors = [
    {name = "Jerry", email = "grbig137@gmail.com"}
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "quart>=0.20.0",
    "PyNaCl>=1.5.0",
    "argon2-cffi>=25.1.0"
]
